Name:                crawler
Version:             1.0
Synopsis:            Extracting information from various site
Description:         Extracting information from various site

cabal-version:       >= 1.2
License:             GPL
Author:              Romain Gerard
Maintainer:          Romain Gerard <romain.gerard@erebe.eu>
build-type:          Simple

Executable          crawler
    hs-source-dirs:       src src/apis
    ghc-options:         -Wall -O3 -threaded
    --ghc-prof-options:-prof -fprof-auto -rtsopts
    main-is:             Main.hs
    Build-Depends:       base,  async
                        ,scotty, http-conduit, http-types
                        ,transformers, lens
                        ,directory, unbounded-delays
                        ,aeson, tagsoup, htoml
                        ,text, bytestring
                        ,time, unix-time

--Library
--    ghc-options:     -O3 -Wall
    --ghc-prof-options:-prof -fprof-auto -rtsopts

