Name:                crawler
Version:             1.0
Synopsis:            Extracting information from various site
Description:         Extracting information from various site

cabal-version:       >= 1.2
License:             GPL
Author:              Romain Gerard
Maintainer:          Romain Gerard <romain.gerard@erebe.eu>
build-type:          Simple

Executable          crawler
    hs-source-dirs:       src src/apis
    ghc-options:         -Wall -O3 -threaded -fno-warn-orphans
    extensions:          Strict
    --ghc-prof-options:-prof -fprof-auto -rtsopts
    other-modules:      Config
                        , Http
                        , Reddit
                        , Service
                        , Youtube
                        , Eztv
                        , HorribleSubs

    main-is:             Main.hs
    Build-Depends:        base, async
                        , http-conduit
                        , transformers, microlens, microlens-th, directory 
                        , aeson, lens-aeson, tagsoup, htoml
                        , text, bytestring
                        , unix-time, classy-prelude

--Library
--    ghc-options:     -O3 -Wall
    --ghc-prof-options:-prof -fprof-auto -rtsopts
